[package]
name = "sc-executor"
version = "0.29.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "A crate that provides means of executing/dispatching calls into the runtime."
documentation = "https://docs.rs/sc-executor"
readme = "README.md"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parking_lot = "0.12.1"
schnellru = "0.2.1"
tracing = "0.1.29"
codec = { package = "parity-scale-codec", version = "3.6.1" }
sc-executor-common = { workspace = true }
sc-executor-wasmtime = { workspace = true }

sp-api = { workspace = true }
sp-core = { workspace = true }
sp-externalities = { workspace = true }
sp-io = { workspace = true }
sp-panic-handler = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-trie = { workspace = true }
sp-version = { workspace = true }
sp-wasm-interface = { workspace = true }

[dev-dependencies]
array-bytes = "6.1"
assert_matches = "1.3.0"
wat = "1.0"
tracing-subscriber = "0.2.25"
paste = "1.0"
regex = "1.6.0"
criterion = "0.5.1"
env_logger = "0.10.1"
num_cpus = "1.13.1"
tempfile = "3.3.0"
sc-runtime-test = { path = "runtime-test" }
sp-runtime = { workspace = true }
# substrate-test-runtime = { workspace = true }
sp-maybe-compressed-blob = { workspace = true }
sp-state-machine = { workspace = true }
sp-tracing = { workspace = true }
sc-tracing = { workspace = true }

[features]
default = ["std"]

std = [
    "sc-runtime-test/std",
    "sp-api/std",
    "sp-core/std",
    "sp-externalities/std",
    "sp-io/std",
    "sp-runtime-interface/std",
    "sp-runtime/std",
    "sp-state-machine/std",
    "sp-tracing/std",
    "sp-trie/std",
    "sp-version/std",
    "sp-wasm-interface/std",
    # "substrate-test-runtime/std",
]

wasm-extern-trace = []
