[package]
name = "tc-executor"
version = "0.29.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
tracing = "0.1.29"

# Substrate
sc-executor = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-version = { workspace = true }
sp-wasm-interface = { workspace = true }
