[package]
name = "tc-mapping-sync"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
futures = { workspace = true }
futures-timer = "3.0.2"
log = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"], optional = true }
# Substrate
sc-client-api = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true, features = ["default"] }
sp-core = { workspace = true, optional = true }
sp-runtime = { workspace = true }
# Frontier
fp-consensus = { workspace = true, features = ["default"] }

# Tenet
tc-db = { workspace = true }
tc-storage = { workspace = true }
tp-rpc = { workspace = true, features = ["default"] }

[features]
default = ["rocksdb"]
rocksdb = ["tc-db/rocksdb"]
sql = [
	"tokio",
	"sp-core",
	"tc-db/sql",
]
