[package]
name = "pallet-ethereum"
version = "4.0.0-dev"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types = { workspace = true }
evm = { workspace = true, features = ["with-codec"] }
scale-codec = { workspace = true }
scale-info = { workspace = true }
# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
# Frontier
fp-consensus = { workspace = true }
fp-ethereum = { workspace = true }
fp-evm = { workspace = true }
fp-rpc = { workspace = true }
fp-storage = { workspace = true }
pallet-evm = { workspace = true }
# Tenet
tenet = { workspace = true }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"evm/std",
	"ethereum-types/std",
	# "rlp/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	# Frontier
	"fp-consensus/std",
	"fp-ethereum/std",
	"fp-evm/std",
	"fp-rpc/std",
	# "fp-self-contained/std",
	"fp-storage/std",
	"pallet-evm/std",
]
