[package]
name = "pallet-ethereum"
version = "4.0.0-dev"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ethereum-types = { workspace = true }
evm = { workspace = true, features = ["with-codec"] }
ethereum = { workspace = true, features = ["with-codec"] }
scale-codec = { workspace = true }
scale-info = { workspace = true }
tp-ethereum = { workspace = true, features = ["with-codec"] }
# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
# Frontier
fp-consensus = { workspace = true }
fp-ethereum = { workspace = true }
fp-evm = { workspace = true }
tp-io = { workspace = true }
fp-storage = { workspace = true }
pallet-evm = { workspace = true }
# Tenet
fp-poc = { workspace = true }
rlp = { workspace = true }
tenet = { workspace = true }
tenet-app = { workspace = true }
tp-rpc = { workspace = true }

[features]
default = ["std"]
std = [
	"tp-ethereum/std",
	"evm/std",
	"ethereum-types/std",
	"rlp/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	# Frontier
	"fp-consensus/std",
	"fp-ethereum/std",
	"fp-evm/std",
	"tp-rpc/std",
	# "fp-self-contained/std",
	"fp-storage/std",
	"pallet-evm/std",
]
