[package]
name = "tp-io"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = { version = "0.10.1", optional = true }
scale-codec = { workspace = true }
secp256k1 = { version = "0.24.0", features = ["recovery", "global-context"], optional = true }
sp-core = { workspace = true }
sp-runtime-interface = { workspace = true, default-features = false }
sp-std = { workspace = true }

[dev-dependencies]
array-bytes = { version = "6.1.0" }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"aes-gcm",
	"sp-core/std",
	"sp-runtime-interface/std",
	"secp256k1",
]
