[package]
name = "tp-rpc"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ethereum-types = { workspace = true }

scale-codec = { workspace = true }
scale-info = { workspace = true }
# Substrate
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
# Froniter
fp-evm = { workspace = true }
fp-rpc = { workspace = true }
# Tenet
tp-ethereum = { workspace = true }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"fp-rpc/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-core/std",
	"scale-codec/std",
	"scale-info/std",
	"tp-ethereum/std",
	"ethereum-types/std",
]
