[package]
name = "tenet-app"
version = "1.0.0"
license = "Apache-2.0"
description = "Primitives for tenet app."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
rlp = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
tp-ethereum = { workspace = true }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"tp-ethereum/std",
	"rlp/std",
	"sp-io/std",
	"sp-std/std",
]
