[package]
name = "tenet"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.19.0"
tokio = "1"
hex-literal = "0.3.4"
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types = { workspace = true }
lazy_static = "1.4"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
ethabi = "18.0.0"