[package]
name = "tenet"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
ethabi = "18.0.0"
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types = { workspace = true }
hex = "0.4.3"
hex-literal = "0.3.4"
lazy_static = "1.4"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1"
web3 = "0.19.0"

[dev-dependencies]
hex = "0.4.3"
