[package]
name = "sc-runtime-test"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
publish = false
homepage = "https://substrate.io"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false, features = [
	"improved_panic_error_reporting",
] }
sp-runtime = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"sp-runtime-interface/std",
	"sp-runtime/std",
	"sp-std/std",
	"substrate-wasm-builder",
]
